--- a/autonomous-game/Cargo.toml
+++ b/autonomous-game/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2021"
 [dependencies]
 macroquad = "0.4.13"
 macroquad-tiled = "0.2.1"
+wasm-bindgen = "0.2"
+serde = { version = "1.0", features = ["derive"] }
+serde-wasm-bindgen = "0.5"
+js-sys = "0.3.77"
+
+[lib]
+crate-type = ["cdylib", "rlib"]
