--- a/autonomous-game/Cargo.toml
+++ b/autonomous-game/Cargo.toml
@@ -11,6 +11,7 @@ wasm-bindgen = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.5"
 js-sys = "0.3.77"
+lazy_static = "1.5.0"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
