--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,5 +11,9 @@
   "devDependencies": {
     "typescript": "~5.7.2",
     "vite": "^6.2.0"
+  },
+  "dependencies": {
+    "@mysten/sui": "^1.25.0",
+    "@mysten/wallet-standard": "^0.14.0"
   }
 }
