--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,17 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@rollup/plugin-inject": "^5.0.5",
+    "add": "^2.0.6",
+    "rollup-plugin-polyfill-node": "^0.13.0",
     "typescript": "~5.7.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-wasm": "^3.4.1"
   },
   "dependencies": {
     "@mysten/enoki": "^0.6.3",
     "@mysten/sui": "^1.25.0",
-    "@mysten/wallet-standard": "^0.14.0"
+    "@mysten/wallet-standard": "^0.14.5"
   }
 }
