--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@eslint/js": "^9.24.0",
     "@mysten/sui": "^1.27.0",
     "dotenv": "^16.5.0",
-    "typescript-eslint": "^8.29.1"
+    "typescript-eslint": "^8.29.1",
+    "util": "^0.12.5"
   }
 }
