--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,3 @@
----
 name: Build and Deploy WASM-Bindgen Vite React App
 on:
   push:
@@ -9,6 +8,17 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+          
+      - name: Install dependencies
+        run: cd frontend && npm install
+        
       - name: Build Vite React App
         run: cd frontend && npm run build
         env:
@@ -19,5 +29,5 @@ jobs:
         if: github.event_name == 'push'
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: dist  # The folder the action should deploy (output of Vite build)
+          folder: frontend/dist  # The folder the action should deploy (output of Vite build)
           branch: gh-pages  # The branch the action should deploy to
