--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,33 +1,32 @@
+---
 name: Build and Deploy WASM-Bindgen Vite React App
 on:
   push:
     branches: [feat/wasm-bindgen]
   pull_request:
     branches: [feat/wasm-bindgen]
+# Add this permissions block
+permissions:
+  contents: write
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-          
       - name: Install dependencies
         run: cd frontend && npm install
-        
       - name: Build Vite React App
         run: cd frontend && npm run build
         env:
           NODE_ENV: production
-
-      # Optional: Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         if: github.event_name == 'push'
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: frontend/dist  # The folder the action should deploy (output of Vite build)
-          branch: gh-pages  # The branch the action should deploy to
+          folder: frontend/dist
+          branch: gh-pages
