--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@mysten/enoki": "^0.6.3",
     "@mysten/sui": "^1.25.0",
-    "@mysten/wallet-standard": "^0.14.5"
+    "@mysten/wallet-standard": "^0.14.5",
+    "buffer": "^6.0.3"
   }
 }
